# AGILE26

./: .gitignore  Dockerfile.api  Dockerfile.frontend  README.md  app.db  app.py  deployment.sdl  docker-compose.yml  models.py  pyproject.toml  state.py
.github/workflows/: discord-notify.yml
api/: .env  .env.example  app.db  bla.txt  crud_operations.py  database.py  kirkpatrick.py  main.py  models.py  requirements.txt  schemas.py  security.py
api/routers/: auth.py  quizzes.py  submissions.py  users.py
pages/: 0_Home_Page.css  0_Home_Page.py  1_Create_Quiz.py  2_Take_Quiz.py  3_Results_Dashboards.py  4_Name_Your_Quiz.py  5_Quiz_Preview.py
pages/styles/: 0_Home_Page.css  4_Name_Quiz_Style.css  5_Preview.css  app_page.css  create_quiz.css  logo.css  logo.py
ui/: add_questions.py
